# nifty_scalper_bot

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.bak.20250818-202202  Dockerfile.txt  JANITOR_CONFIG.md  JANITOR_REPORT.json  Market_Utils.py  Procfile  README-DEPLOY.md  README.md  RUNBOOK.md  ai_code_review.yaml  authenticate_interactive.py  auto_token_refresh.py  bot_control.py  bot_control.sh  broker_manager.py  check_processes.py  clean_start.sh  comprehensive_test.py  config.py  docker-compose.yml  final_test.py  fix_command_loop.py  get_nifty_spot.py  kite_client.py  manage_bot.sh  minimal_test.py  model.pkl  monitor.py  monitor_bot.py  (+55 more)
archive/: scripts_zerodha_token_cli.py
config/: __init__.py  defaults.yaml  events.yaml  strategy.yaml
data/: instruments_sample.csv
ops/: redeploy.sh
patches/: full_repo_optimizations.patch
scripts/: start_bot_morning.sh  stop_bot_evening.sh  true_backtest_dynamic.py  zerodha_token_cli.py  zerodha_token_cli.sh
src/: __init__.py  config.py  config.py.bak.20250818-202835  config.py.bak.20250818-204018  interfaces.py  main.py  monkey_patch_twisted_signals.py  twisted_signal_blocker.py
tests/: conftest.py  e2e_offhours_harness.py.bak.20250818-204018  test_atr_band_clamp.py  test_audit_rootcause.py  test_auto_relax_gating.py  test_auto_resubscribe_atm.py  test_backfill_insufficient.py  test_backfill_no_ohlc.py  test_backfill_refresh.py  test_backpressure_latency.py  test_backtest_report.py  test_bar_builder.py  (+234 more)
(+201 files in other folders)
